package seedu.unienable.model.timetable;

/** Output mode selected for one timetable request. */
public enum TimetableMode {
    NORMAL,
    COMPACT,
    DETAIL
}
